WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235918
[Cocoa] "index 0 out of bounds" exception in AVTrackPrivateAVFObjCImpl::videoTrackConfiguration()
https://bugs.webkit.org/show_bug.cgi?id=235918
Summary
[Cocoa] "index 0 out of bounds" exception in AVTrackPrivateAVFObjCImpl::video...
Jer Noble
Reported
2022-01-31 13:54:07 PST
[Cocoa] "index 0 out of bounds" exception in AVTrackPrivateAVFObjCImpl::videoTrackConfiguration()
Attachments
Patch
(4.63 KB, patch)
2022-01-31 14:01 PST
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing
(4.63 KB, patch)
2022-01-31 14:15 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2022-01-31 13:54:35 PST
<
rdar://87651247
>
Jer Noble
Comment 2
2022-01-31 14:01:14 PST
Created
attachment 450459
[details]
Patch
Eric Carlson
Comment 3
2022-01-31 14:10:26 PST
Comment on
attachment 450459
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=450459&action=review
> Source/WebCore/ChangeLog:12 > + array. It's possible that the array is mutated on a background thread between the cout
s/cout/count/
Jer Noble
Comment 4
2022-01-31 14:15:38 PST
Created
attachment 450462
[details]
Patch for landing
EWS
Comment 5
2022-02-01 11:04:58 PST
Committed
r288897
(
246641@main
): <
https://commits.webkit.org/246641@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 450462
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug