Cherry-pick r288897. rdar://problem/87651247

[Cocoa] "index 0 out of bounds" exception in AVTrackPrivateAVFObjCImpl::videoTrackConfiguration()
    https://bugs.webkit.org/show_bug.cgi?id=235918
    <rdar://87651247>

    Reviewed by Eric Carlson.

    Crash data shows a rare exception thrown from inside a static method formatDescriptionFor()
    in AVTrackPrivateAVFObjCImpl. The method first queries whether the .formatDescriptions
    NSArray property is queryable, then for its count, then retrieves the first object in the
    array. It's possible that the array is mutated on a background thread between the count
    check and when the first object is retrieved.

    To eliminate the possibility that the property is mutated between queries, pull the value
    into a RetainPtr and run the query on that retained object. Use -[NSArray firstObject]
    rather than -objectAtIndex:0, as the former will return nil if the -count is 0, while the
    latter will throw an exception. To guard against the possibility that the
    CMFormatDescriptionRef will go out of scope after the return, return the format description
    itself wrapped in a RetainPtr as well.

    * platform/graphics/avfoundation/AVTrackPrivateAVFObjCImpl.mm:
    (WebCore::formatDescriptionFor):
    (WebCore::AVTrackPrivateAVFObjCImpl::codec const):
    (WebCore::AVTrackPrivateAVFObjCImpl::colorSpace const):
    (WebCore::AVTrackPrivateAVFObjCImpl::sampleRate const):
    (WebCore::AVTrackPrivateAVFObjCImpl::numberOfChannels const):

    Canonical link: https://commits.webkit.org/246641@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288897 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.73@safari-613.1.16.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613.1.16.1-branch@288903 268f45cc-cd09-0410-ab3c-d52691b4dbfc